finish gen-keys, get-ski.py and add key.conf

--- a/key.conf
+++ b/key.conf
@@ -6,7 +6,7 @@
 
 # This definition stops the following lines choking if HOME isn't
 # defined.
-HOME			= .
+HOME			= ~
 RANDFILE		= $ENV::HOME/.rnd
 
 # To use this configuration file with the "-extfile" option of the
