--- a/key.conf
+++ b/key.conf
@@ -42,30 +42,30 @@ default_ca	= bgpsec_CA		# The default ca section
 
 [ bgpsec_CA ]
 
-dir		= .		        # Where everything is kept
-certs		= $dir/certs		# Where the issued certs are kept
-crl_dir		= $dir/crl		# Where the issued crl are kept
-database	= $dir/index.txt	# database index file.
-#unique_subject	= no			# Set to 'no' to allow creation of
-					# several ctificates with same
-					# subject.
-new_certs_dir	= $dir/newcerts		# default place for new certs.
+dir		    = .		                    # Where everything is kept
+certs		= $dir/certs		        # Where the issued certs are kept
+crl_dir		= $dir/crl		            # Where the issued crl are kept
+database	= $dir/index.txt	        # database index file.
+#unique_subject	= no			        # Set to 'no' to allow creation of
+                                        # several ctificates with same
+                                        # subject.
+new_certs_dir	= $dir/newcerts		    # default place for new certs.
 
-certificate	= $dir/cacert.pem 	# The CA certificate
-serial		= $dir/serial 		# The current serial number
-crlnumber	= $dir/crlnumber	# the current crl number
-					# must be commented out to
-					# leave a V1 CRL
-crl		= $dir/crl.pem 		# The current CRL
-private_key	= $dir/private/cakey.pem# The private key
-RANDFILE	= $dir/private/.rand	# private random number file
+certificate	= $dir/cacert.pem 	        # The CA certificate
+serial		= $dir/serial 		        # The current serial number
+crlnumber	= $dir/crlnumber	        # the current crl number
+                                        # must be commented out to
+                                        # leave a V1 CRL
+crl		    = $dir/crl.pem 		        # The current CRL
+private_key	= $dir/private/cakey.pem    # The private key
+RANDFILE	= $dir/private/.rand	    # private random number file
 
-x509_extensions	= usr_cert		# The extentions to add to the cert
+x509_extensions	= usr_cert		        # The extentions to add to the cert
 
 # Comment out the following two lines for the "traditional"
 # (and highly broken) format.
-name_opt 	= ca_default		# Subject Name options
-cert_opt 	= ca_default		# Certificate field options
+name_opt 	= ca_default		        # Subject Name options
+cert_opt 	= ca_default		        # Certificate field options
 
 # Extension copying option: use with caution.
 # copy_extensions = copy
@@ -75,10 +75,10 @@ cert_opt 	= ca_default		# Certificate field options
 # crlnumber must also be commented out to leave a V1 CRL.
 # crl_extensions	= crl_ext
 
-default_days	= 365		# how long to certify for
-default_crl_days= 30	# how long before next CRL
-default_md	= default	# use public key default MD
-preserve	= no			  # keep passed DN ordering
+default_days	    = 365		# how long to certify for
+default_crl_days    = 30	    # how long before next CRL
+default_md	        = default	# use public key default MD
+preserve	        = no	    # keep passed DN ordering
 
 # A few difference way of specifying how similar the request should look
 # For type CA, the listed attributes must be the same, and the optional
@@ -87,24 +87,24 @@ policy		= policy_match
 
 # For the CA policy
 [ policy_match ]
-countryName		= match
-stateOrProvinceName	= match
-organizationName	= match
+countryName		        = match
+stateOrProvinceName	    = match
+organizationName	    = match
 organizationalUnitName	= optional
-commonName		= supplied
-emailAddress		= optional
+commonName		        = supplied
+emailAddress		    = optional
 
 # For the 'anything' policy
 # At this point in time, you must list all acceptable 'object'
 # types.
 [ policy_anything ]
-countryName		= optional
-stateOrProvinceName	= optional
-localityName		= optional
-organizationName	= optional
+countryName		        = optional
+stateOrProvinceName	    = optional
+localityName		    = optional
+organizationName	    = optional
 organizationalUnitName	= optional
-commonName		= supplied
-emailAddress		= optional
+commonName		        = supplied
+emailAddress		    = optional
 
 ####################################################################
 #
@@ -112,12 +112,12 @@ emailAddress		= optional
 #
 [ req ]
 default_bits		= 2048
-default_md		= sha256
+default_md		    = sha256
 default_keyfile 	= privkey.pem
 distinguished_name	= req_distinguished_name
-attributes		= req_attributes
-encrypt_key             = no
-x509_extensions       	= bgpsec_router_ext	# The extentions to add to the self signed cert
+attributes		    = req_attributes
+encrypt_key         = no
+x509_extensions     = bgpsec_router_ext	# The extentions to add to the self signed cert
 
 # This sets a mask for permitted string types. There are several options. 
 # default: PrintableString, T61String, BMPString.
@@ -126,14 +126,14 @@ x509_extensions       	= bgpsec_router_ext	# The extentions to add to the self s
 # nombstr : PrintableString, T61String (no BMPStrings or UTF8Strings).
 # MASK:XXXX a literal mask value.
 # WARNING: ancient versions of Netscape crash on BMPStrings or UTF8Strings.
-string_mask = utf8only
+string_mask         = utf8only
 
-req_extensions = bgpsec_router_csr # The extensions to add to a certificate request
+req_extensions      = bgpsec_router_csr # The extensions to add to a certificate request
 
 [ req_distinguished_name ]
 commonName			= special RPKI field...  need to gen it.
-commonName_max			= 64
-commonName_default              = finishMeBecauseThisIsWrong
+commonName_max		= 64
+commonName_default  = finishMeBecauseThisIsWrong
 
 # SET-ex3			= SET extension number 3
 
@@ -170,8 +170,8 @@ basicConstraints=CA:FALSE
 nsComment			= "OpenSSL Generated Certificate"
 
 # PKIX recommendations harmless if included in all certificates.
-subjectKeyIdentifier=hash
-authorityKeyIdentifier=keyid,issuer
+subjectKeyIdentifier    = hash
+authorityKeyIdentifier  = keyid,issuer
 
 # This stuff is for subjectAltName and issuerAltname.
 # Import the email address.
@@ -198,16 +198,16 @@ authorityKeyIdentifier=keyid,issuer
 # Extensions to add to a certificate request
 
 basicConstraints = CA:FALSE
-keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+keyUsage         = nonRepudiation, digitalSignature, keyEncipherment
 
 [bgpsec_router_ext]
 # 3.1.3.1.  Extended Key Usage 
-#extKeyUsage = id_kp_bgpsec_router
-keyUsage = digitalSignature
-basicConstraints=CA:FALSE
-subjectKeyIdentifier=hash
-#extendedKeyUsage = id_kp_bgpsec_router
-extendedKeyUsage = 1.3.6.1.5.5.7.99.99
+#extKeyUsage            = id_kp_bgpsec_router
+keyUsage                = digitalSignature
+basicConstraints        = CA:FALSE
+subjectKeyIdentifier    = hash
+#extendedKeyUsage       = id_kp_bgpsec_router
+extendedKeyUsage        = 1.3.6.1.5.5.7.99.99
 
 #extKeyUsage = id_kp_bgpsec_router
 
@@ -219,8 +219,8 @@ extendedKeyUsage = 1.3.6.1.5.5.7.99.99
 [bgpsec_router_csr]
 # defined in 3.2.  BGPSEC Router Certificate Request Profile
 # 3.1.3.1.  Extended Key Usage 
-extendedKeyUsage = id_kp_bgpsec_router
-subjectKeyIdentifier=hash
+extendedKeyUsage        = id_kp_bgpsec_router
+subjectKeyIdentifier    = hash
 
 [ v3_ca ]
 
@@ -230,9 +230,9 @@ subjectKeyIdentifier=hash
 
 # PKIX recommendation.
 
-subjectKeyIdentifier=hash
+subjectKeyIdentifier    = hash
 
-authorityKeyIdentifier=keyid:always,issuer
+authorityKeyIdentifier  = keyid:always,issuer
 
 # This is what PKIX recommends but some broken software chokes on critical
 # extensions.
@@ -265,7 +265,7 @@ basicConstraints = CA:true
 # Only issuerAltName and authorityKeyIdentifier make any sense in a CRL.
 
 # issuerAltName=issuer:copy
-authorityKeyIdentifier=keyid:always
+authorityKeyIdentifier = keyid:always
 
 [ proxy_cert_ext ]
 # These extensions should be added when creating a proxy certificate
@@ -297,8 +297,8 @@ basicConstraints=CA:FALSE
 nsComment			= "OpenSSL Generated Certificate"
 
 # PKIX recommendations harmless if included in all certificates.
-subjectKeyIdentifier=hash
-authorityKeyIdentifier=keyid,issuer
+subjectKeyIdentifier    = hash
+authorityKeyIdentifier  = keyid,issuer
 
 # This stuff is for subjectAltName and issuerAltname.
 # Import the email address.
@@ -328,24 +328,24 @@ default_tsa = tsa_config1	# the default TSA section
 [ tsa_config1 ]
 
 # These are used by the TSA reply generation only.
-dir		= ./demoCA		# TSA root directory
-serial		= $dir/tsaserial	# The current serial number (mandatory)
-crypto_device	= builtin		# OpenSSL engine to use for signing
-signer_cert	= $dir/tsacert.pem 	# The TSA signing certificate
-					# (optional)
-certs		= $dir/cacert.pem	# Certificate chain to include in reply
-					# (optional)
-signer_key	= $dir/private/tsakey.pem # The TSA private key (optional)
+dir		                = ./demoCA		                        # TSA root directory
+serial		            = $dir/tsaserial	                    # The current serial number (mandatory)
+crypto_device	        = builtin		                        # OpenSSL engine to use for signing
+signer_cert	            = $dir/tsacert.pem 	                    # The TSA signing certificate
+                                                                # (optional)
+certs		            = $dir/cacert.pem	                    # Certificate chain to include in reply
+					                                            # (optional)
+signer_key	            = $dir/private/tsakey.pem               # The TSA private key (optional)
 
-default_policy	= tsa_policy1		# Policy if request did not specify it
-					# (optional)
-other_policies	= tsa_policy2, tsa_policy3	# acceptable policies (optional)
-digests		= md5, sha1		# Acceptable message digests (mandatory)
-accuracy	= secs:1, millisecs:500, microsecs:100	# (optional)
-clock_precision_digits  = 0	# number of digits after dot. (optional)
-ordering		= yes	# Is ordering defined for timestamps?
-				# (optional, default: no)
-tsa_name		= yes	# Must the TSA name be included in the reply?
-				# (optional, default: no)
-ess_cert_id_chain	= no	# Must the ESS cert id chain be included?
-				# (optional, default: no)
+default_policy	        = tsa_policy1		                    # Policy if request did not specify it
+                                                                # (optional)
+other_policies	        = tsa_policy2, tsa_policy3	            # acceptable policies (optional)
+digests		            = md5, sha1		                        # Acceptable message digests (mandatory)
+accuracy	            = secs:1, millisecs:500, microsecs:100	# (optional)
+clock_precision_digits  = 0	                                    # number of digits after dot. (optional)
+ordering		        = yes	                                # Is ordering defined for timestamps?
+				                                                # (optional, default: no)
+tsa_name		        = yes	                                # Must the TSA name be included in the reply?
+				                                                # (optional, default: no)
+ess_cert_id_chain	    = no	                                # Must the ESS cert id chain be included?
+				                                                # (optional, default: no)
